된다.. lambda edge배포하고 cf 무효화를 실행해줘야된다.

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.png" /> -->
+    <link rel="icon" href="/favicon.png" />
     <meta
       name="viewport"
       content="width=device-width, height=device-height, initial-scale=1, shrink-to-fit=no"
@@ -16,7 +16,7 @@
     <meta name="keywords" content="" />
     <meta property="og:type" content="website">
     <meta property="og:title" content="PRACOON" />
-    <meta property="og:image" content="/meta.jpg" />
+    <meta property="og:image" content="https://d2ea53l1kq1p10.cloudfront.net//meta.jpg" />
     <meta property="og:description" content="my page" />
     <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic&family=Noto+Sans+KR:wght@400;500;700&family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet" type="text/css" />
     <!-- <link rel="manifest" href="/manifest.json" /> -->
