--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,10 @@
     <meta property="og:url" content="https://d2ea53l1kq1p10.cloudfront.net" />
     <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic&family=Noto+Sans+KR:wght@400;500;700&family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet" type="text/css" />
     <!-- <link rel="manifest" href="/manifest.json" /> -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="PRACOON" />
+    <meta name="twitter:description" content="정보 저장소" />
+    <meta name="twitter:image" content="https://d2ea53l1kq1p10.cloudfront.net/meta.jpg" />
     <title>PRACOON</title>
   </head>
   <body>
