--- a/public/index.html
+++ b/public/index.html
@@ -8,36 +8,42 @@
       content="width=device-width, height=device-height, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="theme-color" content="#000000" />
-    <meta name="google-site-verification" content="JgJJlksCLgJnKfkrHuYmKlSJMBFVC1fv9UpFJxT6Onc" />
     <meta
-      name="description"
-      content="정보 저장소"
+      name="google-site-verification"
+      content="JgJJlksCLgJnKfkrHuYmKlSJMBFVC1fv9UpFJxT6Onc"
     />
+    <meta name="description" content="정보 저장소" />
     <meta name="keywords" content="" />
-    <meta property="og:type" content="website">
+    <meta property="og:type" content="website" />
     <meta property="og:title" content="PRACOON" />
-    <meta property="og:image" content="https://d2ea53l1kq1p10.cloudfront.net/meta.jpg" />
+    <meta
+      property="og:image"
+      content="https://d2ea53l1kq1p10.cloudfront.net/meta.jpg"
+    />
     <meta property="og:description" content="정보 저장소" />
     <meta property="og:url" content="https://d2ea53l1kq1p10.cloudfront.net" />
-    <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic&family=Noto+Sans+KR:wght@400;500;700&family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet" type="text/css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic&family=Noto+Sans+KR:wght@400;500;700&family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:wght@300;400;500;700&display=swap"
+      rel="stylesheet"
+      type="text/css"
+    />
     <!-- <link rel="manifest" href="/manifest.json" /> -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="PRACOON" />
     <meta name="twitter:description" content="정보 저장소" />
-    <meta name="twitter:image" content="https://d2ea53l1kq1p10.cloudfront.net/meta.jpg" />
+    <meta
+      name="twitter:image"
+      content="https://d2ea53l1kq1p10.cloudfront.net/meta.jpg"
+    />
     <title>PRACOON</title>
-    <style>
-      iframe {
-        position: absolute;
-        top: -100px;
-        left: -100px;
-        width: calc(100vw + 200px);
-        height: calc(41vw + 200px);
-      }
-    </style>
+
+    <link rel="stylesheet" href="/global.css" />
+    <link rel="stylesheet" href="/build/bundle.css" />
+
   </head>
   <body>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/mI9oyFMUlfg?autoplay=1&controls=0&enablejsapi=1&disablekb=1&loop=1&fs=0&modestbranding=0&mute=1&rel=0&playsinline=1&origin=https%3A%2F%2Fwww.cryptogolfimpact.io&widgetid=1"" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="1"></iframe>
+    <script defer src="/build/bundle.js"></script>
+    <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/mI9oyFMUlfg?autoplay=1&controls=0&enablejsapi=1&disablekb=1&loop=1&fs=0&modestbranding=0&mute=1&rel=0&playsinline=1&origin=https%3A%2F%2Fwww.cryptogolfimpact.io&widgetid=1"" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="1"></iframe> -->
     hello world
   </body>
 </html>
