--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
       rel="stylesheet"
       type="text/css"
     />
+    <link href="//cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
     <!-- <link rel="manifest" href="/manifest.json" /> -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="PRACOON" />
@@ -37,7 +38,6 @@
     />
     <title>PRACOON</title>
 
-    <link rel="stylesheet" href="/global.css" />
     <link rel="stylesheet" href="/build/bundle.css" />
 
   </head>
